<resources>

    <!-- GLOBAL -->
    <string name="possitive_button">Evet</string>
    <string name="negative_button">Hayır</string>

    <!-- splash screen -->
    <string name="app_name">Altin Fiyat Takip</string>
    <string name="splash_screen_logo_desc">Altın Fiyat Takip Logo</string>

    <!-- server error activity-->
    <string name="server_error_screen_errorText">Sunucu Hatası!</string>
    <string name="server_error_screen_errorDetail">Lütfen daha sonra tekrar deneyin</string>

    <!-- button_nav -->
    <string name="button_nav_home">Ana Sayfa</string>
    <string name="button_nav_add_valuable">Ekle</string>
    <string name="button_nav_live_market">Canlı Piyasa</string>
    <string name="button_nav_my_assets">Varlıklarım</string>

    <!-- home screen -->
    <string name="home_screen_my_assets">Varlıklarım</string>

    <!-- home screen degerli recycler adapter-->
    <string name="home_screen_degerli_ra_isimAltin">%1d %2s</string>
    <string name="home_screen_degerli_ra_isimDoviz">%.2f %2s</string>
    <string name="home_screen_degerli_ra_tarih">%1s</string>
    <string name="home_screen_degerli_ra_toplam">%1s %2s</string>
    <string name="home_screen_degerli_ra_karZarar">%1s %2s</string>

    <!-- degerli card -->
    <string name="degerli_card_satis_text">Satış:</string>
    <string name="degerli_card_alis_text">Alış:</string>

    <!-- altin ekle screen-->
    <string name="altinEkle_screen_altinlar">Altınlar</string>
    <string name="altinEkle_screen_dovizler">Dövizler</string>
    <string name="altinEkle_screen_radioButton_simdi">Şimdi Aldım</string>
    <string name="altinEkle_screen_radioButton_gecmis">Geçmiş Zamanlı Aldım</string>
    <string name="altinEkle_screen_date_hint">GG:AA:YYYY</string>
    <string name="altinEkle_screen_miktar">miktar</string>
    <string name="altinEkle_screen_pick_date">...</string>
    <string name="altinEkle_screen_add_button">Ekle</string>
    <string name="altinEkle_screen_alis_text">Alış:</string>
    <string name="altinEkle_screen_satis_text">Satış:</string>
    <string name="altinEkle_screen_to_editText">to</string>
    <string name="altinEkle_screen_from_editText">from</string>
    <string name="altinEkle_screen_error_pick_date">Tarih seçin!</string>
    <string name="altinEkle_screen_error_enter_value">Miktar girin!</string>
    <string name="altinEkle_screen_error_server">Sunucu hatası, daha sonra tekrar deneyin.</string>
    <string name="altinEkle_screen_waiting_reply_from_server">Sunucudan yanıt bekleniyor.</string>
    <string name="altinEkle_screen_switch_off">Altın</string>
    <string name="altinEkle_screen_switch_on">Döviz</string>

    <!--onay screen-->
    <string name="onay_screen_alisFiyati">Alış Fiyatı</string>
    <string name="onay_screen_satisFiyati">Satış Fiyatı</string>
    <string name="onay_screen_kalan_saniye">%1s saniye.</string>
    <string name="onay_screen_satisTextView">%.2f %2s</string>
    <string name="onay_screen_alisTextView">%.2f %2s</string>
    <string name="onay_screen_tarihTextView">Tarih %2s </string>
    <string name="onay_screen_ozetTextView">%.2f %2s = %.2f %4s </string>

    <!-- degerli liste screen -->
    <string name="degerli_screen_rb_gold">Altın</string>
    <string name="degerli_screen_rb_rate">Kur</string>
    <string name="degerli_screen_switch_off">Altın</string>
    <string name="degerli_screen_switch_on">Döviz</string>

    <!-- degerli liste recycler adapter -->
    <string name="degerli_ra_aciklama">%1s</string>
    <string name="degerli_ra_alis_fiyati">%.2f %2s</string>
    <string name="degerli_ra_satis_fiyati">%.2f %2s</string>
    <string name="degerli_ra_code">%1s</string>

    <!--price not found dialog -->
    <string name="price_not_found_price_not_found">Seçili tarihe ait fiyat bulunamadı</string>
    <string name="price_not_found_possitive_button">Tamam</string>


</resources>