<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_AltinEkle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AltinEkleFragment">

    <Switch
        android:id="@+id/altinEkle_switch_altinDoviz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/altinEkle_screen_switch_off"
        app:layout_constraintBottom_toTopOf="@+id/altinEkle_textView_altinDoviz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/altinEkle_spinner_degerli"
        android:layout_width="250dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altinEkle_textView_altinDoviz"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/altinEkle_textView_altinDoviz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/altinEkle_screen_altinlar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/altinEkle_spinner_degerli"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/altinEkle_spinner_degerli"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/altinEkle_radioGroup_secim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altinEkle_spinner_degerli">

        <RadioButton
            android:id="@+id/altinEkle_radioButton_simdiAldim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/altinEkle_screen_radioButton_simdi" />

        <RadioButton
            android:id="@+id/altinEkle_radioButton_gecmisZamanliAldim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/altinEkle_screen_radioButton_gecmis" />
    </RadioGroup>

    <Button
        android:id="@+id/altinEkle_button_ekle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/altinEkle_screen_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_tarih"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altinEkle_radioGroup_secim"
        tools:visibility="gone">

        <EditText
            android:id="@+id/altinEkle_editText_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/altinEkle_screen_date_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/altinEkle_button_tarihSec"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:text="@string/altinEkle_screen_pick_date"
            app:layout_constraintBottom_toBottomOf="@+id/altinEkle_editText_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/altinEkle_editText_date" />

        <EditText
            android:id="@+id/altinEkle_editText_gecmisMiktar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/altinEkle_screen_miktar"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            app:layout_constraintStart_toStartOf="@+id/altinEkle_editText_date"
            app:layout_constraintTop_toBottomOf="@+id/altinEkle_editText_date"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/altinEkle_textView_fromTextTarih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/altinEkle_editText_gecmisMiktar"
            app:layout_constraintStart_toEndOf="@+id/altinEkle_editText_gecmisMiktar"
            app:layout_constraintTop_toTopOf="@+id/altinEkle_editText_gecmisMiktar"
            tools:text="Dolar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/altinEkle_linearLayout_fiyat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altinEkle_radioGroup_secim"
        tools:visibility="visible">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/altinEkle_textView_alis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altinEkle_screen_alis_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/altinEkle_imageView_alisFiyati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/green_up_arrow" />

        <TextView
            android:id="@+id/altinEkle_textView_alisFiyati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="17,341 ₺" />

        <TextView
            android:id="@+id/altinEkle_textView_satis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:text="@string/altinEkle_screen_satis_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/altinEkle_imageView_satisFiyati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/green_up_arrow" />

        <TextView
            android:id="@+id/altinEkle_textView_satisFiyati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="17,375 ₺" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_miktarSimdi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altinEkle_linearLayout_fiyat"
        tools:visibility="visible">

        <EditText
            android:id="@+id/altinEkle_editText_from"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/altinEkle_screen_from_editText"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/altinEkle_editText_to"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/altinEkle_screen_to_editText"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/swap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/altinEkle_editText_to"
            app:layout_constraintStart_toEndOf="@+id/altinEkle_editText_from"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/altinEkle_textView_fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/altinEkle_editText_from"
            app:layout_constraintStart_toStartOf="@+id/altinEkle_editText_from"
            app:layout_constraintTop_toBottomOf="@+id/altinEkle_editText_from"
            tools:text="Dolar" />

        <TextView
            android:id="@+id/altinEkle_textView_toText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/altinEkle_editText_to"
            app:layout_constraintStart_toStartOf="@+id/altinEkle_editText_to"
            app:layout_constraintTop_toBottomOf="@+id/altinEkle_editText_to"
            tools:text="TL" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>